# shortcuts

./: CMakeLists.txt  README.md  short.c
include/: cmd.h  utils.h
src/: code_cmd.c  short.c  utils.c
